  now not used in the `HOME' mode

* added a parameter `-r'/`--resultFile' to write all analysis results into a
  single file in the file format of libconfig (see
  `http://www.hyperrealm.com/libconfig')

* fixed bug #12910 and bug #15282 (`https://gna.org/bugs/?12910' and
  `https://gna.org/bugs/?15282'): file output for `-g' and `-m' parameter was
  broken

Version 1.14
============

* no statistics output is printed when using directive `STATESPACE'

* fixed bug #14295 (see `https://gna.org/bugs/?14295'): Place is ignored in
  marking output; isolated places are not removed when using directive
  `STATESPACE'

* whenever a SCC representative is found, all members (excluding the
  representative) of the current SCC are now printed out when directive
  `STATESPACE' is used

Version 1.13
============

* fixed a small bug in the `PREDUCTION' mode: nets without significant places
  are now analyzed instantly

* added new scripts to build binary releases

* a binary release consists of the following pre-configured LoLAs: lola-full,
  lola-full1, lola-deadlock, lola-deadlock1, lola-modelchecking,
  lola-boundednet, lola-liveprop, lola-liveprop1, lola-statepredicate, and
  lola-statepredicate1

* changed the way tests are run (using GNU Autotest now)

Version 1.12
============

* addressed bug #13538 (`https://gna.org/bugs/?13538'): `make install'
  installs all binaries with the name `lola' or `lola-xxx' for a standard
  configuration `userconfig.H.xxx' that are present in the `src' folder.
  Likewise, `make uninstall' removes all installed binaries with the name
  `lola' or `lola-xxx' for a standard configuration `userconfig.H.xxx'

* adjusted the parser to cope with different line endings (CR, LF, CRLF)

* licensed LoLA under the GNU Affero General Public License (Affero GPL), see
  file `COPYING'

Version 1.11
============

* fixed bug #12903 (`https://gna.org/bugs/?12903'): fixed problems regarding
  `BOUNDEDNET' mode
