@@ -1,0 +1,14 @@
+// NUMERICAL PARAMETERS
+#define REPORTFREQUENCY 100000
+#define HASHSIZE 65536
+
+// REDUCTION TECHNIQUES
+#define STUBBORN
+#define PREDUCTION
+#define SMALLSTATE
+
+// GRAPH EXPLORATION STRATEGY
+#define DEPTH_FIRST
+
+// VERIFICATION PROBLEM
+#define REVERSIBILITY
