@@ -20,6 +20,8 @@ Version 1.15-unreleased
   `https://gna.org/bugs/?15282'): file output for `-g' and `-m' parameter was
   broken
 
+* added user configurations for the binaries used by the ProM plugin
+
 Version 1.14
 ============
 
